@@ -9,7 +9,6 @@ o check if monthday.sh handles multiple changes on 1 day
 o split off rdup-utils and rdup-core?
 o add -x switch to dump.sh
 o make hdup.pl first class citizen
-o make gzip.sh -c as the rest
 o maximum errors....
 
 :rdup:
