@@ -4,7 +4,9 @@ xxxx 2006: 0.2.16 Miek <miek@miek.nl>
    configure:
    * added check for GNU make (isn't used yet)
    * Solaris fixes (dirfd)
-   * mirror.pl: major fix: use the correct backup dir
+   * mirror.pl: major fixes: use the correct backup dir
+     and correct -c.
+   * dump.sh: use the perl tools! Added -x option
 
 
 1 Sep 2006: 0.2.15 Miek <miek@miek.nl>
